--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,8 @@ $rsclone-theme: mat-light-theme((
 
   --primary-color:        #15a4cb; //left-menu-color
   --primary-color-btn:    #15a4cb; //btn-color
-  --primary-text-color:   #f2f2f2; //btn-text-color, logo-color, bg-card-color
+  --primary-text-color:   #fefefe; //btn-text-color, logo-color, bg-card-color
+  --accent-color:         #FF4081;
   --accent-color-dark:    #C2185B;
   --accent-violet-color:  #783b78; //text-color-accent, footer
   --secondary-text-color: #151515; //text-color-base
