--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -4,11 +4,11 @@
   box-sizing: border-box;
   font-weight: 600;
   text-transform: uppercase;
-  color: #f6f3ec;
+  color: $color-white;
   background: var(--primary-color-btn);
   border: 1px solid $color-white-op04;
   border-radius: 2em;
-  box-shadow: 0 8px 16px 0 shadow-dark;
+  box-shadow: 0 8px 16px 0 $shadow-dark;
   transition: 0.5s;
 }
 
